--- a/index.html
+++ b/index.html
@@ -1,165 +1,49 @@
-import React, { createContext, useContext, useState, useEffect } from 'react';
-import AsyncStorage from '@react-native-async-storage/async-storage';
-import {
-  sendOtp,
-  verifyOtp,
-  getCurrentSession,
-  getCurrentAuthUser,
-  getUserProfileByUuid,
-  createUserProfile,
-  updateUserProfileByUuid,
-  logout as supaLogout,
-} from '../services/userService'; // Path sahi rakhna!
-
-// --- Context type and initial ---
-const AuthContext = createContext({
-  authUser: null,
-  loading: true,
-  loginWithOtp: async () => {},
-  verifyOtpAndLogin: async () => {},
-  logout: async () => {},
-  refreshProfile: async () => {}, // <-- ADD refresh method!
-  updateProfile: async () => {}, // <-- ADD update method!
-});
-
-// --- Provider ---
-export const AuthProvider = ({ children }) => {
-  const [authUser, setAuthUser] = useState(null);
-  const [loading, setLoading] = useState(true);
-
-  // Context profile refresh utility (reusable)
-  const refreshProfile = async () => {
-    setLoading(true);
-    try {
-      // Check token from AsyncStorage
-      const token = await AsyncStorage.getItem('user_jwt');
-      if (!token) {
-        setAuthUser(null);
-        setLoading(false);
-        return;
-      }
-
-      const user = await getCurrentAuthUser();
-
-      if (user?.id || user?.uuid) {
-        let profile = await getUserProfileByUuid(user?.id || user?.uuid);
-
-        if (!profile) {
-          console.log('Calling createUserProfile...');
-          profile = await createUserProfile({
-            uuid: user?.id || user?.uuid,
-            phone: user?.phone,
-          });
-          console.log('Profile after insert:', profile);
-        }
-        setAuthUser(profile);
-      } else {
-        setAuthUser(null);
-      }
-    } catch (e) {
-      console.log('refreshProfile error:', e);
-      setAuthUser(null);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>LimeGoal - Coming Soon</title>
+  <style>
+    body {
+      background: #111;
+      color: #bfff00;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
     }
-    setLoading(false);
-  };
-
-  // On mount, session check & context set
-  useEffect(() => {
-    const fetchSession = async () => {
-      setLoading(true);
-      try {
-        // Step 1: Check token from AsyncStorage
-        const token = await AsyncStorage.getItem('user_jwt');
-
-        if (token) {
-          // Optionally validate token if needed here
-          await refreshProfile();
-        } else {
-          // If no token, fallback to backend session check (extra safe)
-          const session = await getCurrentSession();
-
-          if (session?.user && session?.access_token) {
-            // Store token to AsyncStorage
-            await AsyncStorage.setItem('user_jwt', session.access_token);
-            await refreshProfile();
-          } else {
-            setAuthUser(null);
-          }
-        }
-      } catch (e) {
-        setAuthUser(null);
-      }
-      setLoading(false);
-    };
-    fetchSession();
-  }, []);
-
-  // OTP send
-  const loginWithOtp = async phone => {
-    await sendOtp(phone);
-  };
-
-  // OTP verify and login - sets context and saves token
-  const verifyOtpAndLogin = async (phone, otp) => {
-    setLoading(true);
-    try {
-      const session = await verifyOtp(phone, otp);
-
-      if (session?.access_token) {
-        await AsyncStorage.setItem('user_jwt', session.access_token);
-      }
-
-      if (session?.user) {
-        await refreshProfile(); // <-- This creates user row agar na mile
-        setLoading(false);
-        return true;
-      }
-    } catch (err) {
-      setAuthUser(null);
+    .logo {
+      font-size: 2.2rem;
+      font-weight: bold;
+      margin-bottom: 18px;
+      color: #bfff00;
+      letter-spacing: 2px;
     }
-    setLoading(false);
-    return null;
-  };
-
-  // Profile update with context sync
-  const updateProfile = async (updatedFields = {}) => {
-    setLoading(true);
-    try {
-      const user = await getCurrentAuthUser();
-      if (user?.id || user?.uuid) {
-        await updateUserProfileByUuid(user?.id || user?.uuid, updatedFields);
-        let newProfile = await getUserProfileByUuid(user?.id || user?.uuid);
-        setAuthUser(newProfile);
-        setLoading(false);
-        return newProfile;
-      }
-    } catch (err) {
-      setLoading(false);
+    .soon {
+      font-size: 1.6rem;
+      margin-bottom: 14px;
+      font-weight: 500;
     }
-    return null;
-  };
-
-  // Logout flow - removes token from AsyncStorage
-  const logout = async () => {
-    await supaLogout();
-    await AsyncStorage.removeItem('user_jwt');
-    setAuthUser(null);
-    setLoading(false);
-  };
-
-  // Context value
-  const value = {
-    authUser,
-    loading,
-    loginWithOtp,
-    verifyOtpAndLogin,
-    logout,
-    refreshProfile,
-    updateProfile,
-  };
-
-  return <AuthContext.Provider value={value}>{children}</AuthContext.Provider>;
-};
-
-// Custom hook
-export const useAuth = () => useContext(AuthContext);
+    .msg {
+      color: #fff;
+      font-size: 1.1rem;
+      margin-bottom: 32px;
+    }
+    .email {
+      color: #bfff00;
+      font-size: 1rem;
+      margin-bottom: 12px;
+      font-weight: 500;
+    }
+  </style>
+</head>
+<body>
+  <div class="logo">LimeGoal</div>
+  <div class="soon">⚽ Coming Soon! ⚽</div>
+  <div class="msg">Our football scoring app is launching soon.<br>Stay tuned for updates!</div>
+  <div class="email">Contact: contact@limegoal.com</div>
+</body>
+</html>
