--- a/index.html
+++ b/index.html
@@ -3,47 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <title>LimeGoal - Coming Soon</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #111;
+      background: linear-gradient(135deg, #111 75%, #4f731c 100%);
       color: #bfff00;
-      font-family: Arial, sans-serif;
+      font-family: 'Montserrat', Arial, sans-serif;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       margin: 0;
+      transition: background 1s;
+    }
+    .card {
+      background: rgba(30,32,30,0.89);
+      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.34);
+      border-radius: 22px;
+      padding: 40px 32px 28px 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .logo-img {
+      width: 90px;
+      height: 90px;
+      margin-bottom: 20px;
+      border-radius: 50%;
+      box-shadow: 0 4px 16px #4f731c44;
+      object-fit: contain;
+      border: 2px solid #bfff00;
+      background: #242800;
+      transition: box-shadow 0.4s;
     }
     .logo {
-      font-size: 2.2rem;
+      font-size: 2rem;
       font-weight: bold;
-      margin-bottom: 18px;
       color: #bfff00;
       letter-spacing: 2px;
+      margin-bottom: 10px;
+      text-shadow: 0 2px 14px #000a;
     }
     .soon {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       margin-bottom: 14px;
       font-weight: 500;
+      color: #ffec55;
+      animation: fadein 1.1s;
+    }
+    @keyframes fadein {
+      from { opacity: 0; transform: translateY(18px);}
+      to   { opacity: 1; transform: translateY(0);}
     }
     .msg {
       color: #fff;
-      font-size: 1.1rem;
-      margin-bottom: 32px;
+      font-size: 1.11rem;
+      margin-bottom: 18px;
+      text-align: center;
+      letter-spacing: 0.7px;
+      max-width: 340px;
     }
     .email {
+      background: #292929;
       color: #bfff00;
       font-size: 1rem;
       margin-bottom: 12px;
       font-weight: 500;
+      padding: 7px 18px;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px #4f731c29;
+      display: inline-block;
+      transition: background 0.3s,color 0.3s;
+    }
+    .email:hover, .email:focus {
+      background: #4f731c;
+      color: #fff;
+      cursor: pointer;
+      outline: none;
+    }
+    .socials {
+      margin-top: 10px;
+      display: flex;
+      gap: 16px;
+    }
+    .socials a {
+      color: #bfff00;
+      font-size: 1.45rem;
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+    .socials a:hover {
+      color: #ffec55;
+    }
+    @media (max-width: 460px){
+      .card {
+        padding: 26px 9px;
+      }
+      .soon, .logo { font-size: 1.13rem;}
+      .logo-img { width: 60px; height: 60px;}
     }
   </style>
+  <!-- FontAwesome for Social Icons -->
+  <script src="https://kit.fontawesome.com/5fa88c658e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="logo">LimeGoal</div>
-  <div class="soon">⚽ Coming Soon! ⚽</div>
-  <div class="msg">Our football scoring app is launching soon.<br>Stay tuned for updates!</div>
-  <div class="email">Contact: contact@limegoal.com</div>
+  <div class="card">
+    <!-- Custom Logo Image -->
+    <img class="logo-img" src="logo.png" alt="LimeGoal Logo" />
+    <div class="logo">LimeGoal</div>
+    <div class="soon">⚽ Coming Soon! ⚽</div>
+    <div class="msg">Our football scoring app is launching soon.<br>Stay tuned for updates!</div>
+    <a class="email" href="mailto:contact@limegoal.com">✉️&nbsp;Contact: contact@limegoal.com</a>
+    <div class="socials">
+      <a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="https://twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+    </div>
+  </div>
 </body>
 </html>
