--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="card">
     <img class="logo-img" src="logo.png" alt="LimeGoal Logo" />
     <div class="logo">LimeGoal</div>
-    <div class="tagline">Your Game. Your Stats. Your Story.</div>
+    <div class="tagline">Where Every Kick Matters!</div>
     <div class="soon">⚽ Coming Soon ⚽</div>
     <div class="msg">Our football scoring app is almost ready.<br>Stay tuned for match-day magic!</div>
     <a class="email" href="mailto:contact@limegoal.com">✉️ contact@limegoal.com</a>
@@ -173,4 +173,5 @@
   <footer>© 2025 LimeGoal. All rights reserved.</footer>
 </body>
 </html>
+
 
