--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
     </div>
   </main>
 
-  <footer>© 2025 LimeGoal. All rights reserved.</footer>
+<footer>
+  © 2025 LimeGoal. All rights reserved. |
+  <a href="https://limegoal.com/privacy" style="color:#bfff00;">Privacy Policy</a>
+</footer>
 </body>
 </html>
+
