Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@
 
 <footer>
   © 2025 LimeGoal. All rights reserved. |
-  <a href="https://limegoal.com/privacy" style="color:#bfff00;">Privacy Policy</a>
+  <a href="https://limegoal.com/privacy" style="color:#777;">Privacy Policy</a>
 </footer>
 </body>
 </html>
+
 
