--- a/index.html
+++ b/index.html
@@ -224,9 +224,10 @@
 
 <footer>
   © 2025 LimeGoal. All rights reserved. |
-  <a href="https://limegoal.com/privacy" style="color:#777;">Privacy Policy</a>
+  <ahref="https://limegoal.com/privacy.html" style="color:#777;">Privacy Policy</a>
 </footer>
 </body>
 </html>
+
 
 
