Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 
 <footer>
   © 2025 LimeGoal. All rights reserved. |
-  <a href="https://limegoal.com/privacy.html" style="color:#777;">Privacy Policy</a>
-</footer>
+<a href="https://www.limegoal.com/privacy.html" style="color:#777;">Privacy Policy</a></footer>
 </body>
 </html>
+
 
 
 
