--- a/index.html
+++ b/index.html
@@ -224,9 +224,12 @@
 
 <footer>
   © 2025 LimeGoal. All rights reserved. |
-<a href="https://www.limegoal.com/privacy.html" style="color:#777;">Privacy Policy</a></footer>
+  <a href="https://www.limegoal.com/privacy.html" style="color:#777;">Privacy Policy</a> |
+  <a href="delete-account.html" style="color:#777;">Delete Account</a>
+</footer>
 </body>
 </html>
+
 
 
 
