--- a/delete-account.html
+++ b/delete-account.html
@@ -54,7 +54,7 @@
 
   <div class="small contact">
     <b>For urgent requests:</b> <br>
-    Email <a href="mailto:support@limegoal.com">contactt@limegoal.com</a> or WhatsApp/Text your registered information to <b>+91 9974197210</b>.
+    Email <a href="mailto:contact@limegoal.com">contact@limegoal.com</a> or WhatsApp/Text your registered information to <b>+91 9974197210</b>.
   </div>
 
   <div class="small" style="margin-top:24px;">
