Enhance privacy policy with summary and deletion info
Added a quick summary of data collection practices and updated the data modification section to include account deletion options.

--- a/privacy.html
+++ b/privacy.html
@@ -80,12 +80,26 @@
       margin-top: 14px;
       font-weight: 600;
     }
+    .notice {
+      background: #eef7e9;
+      border-left: 5px solid #bbe5b0;
+      padding: 9px 18px;
+      font-size: 1rem;
+      margin-bottom: 14px;
+      color: #196B19;
+      border-radius: 7px;
+    }
     @media (max-width: 600px) {
       .container { padding: 18px 4px 10px 4px; }
       h1 { font-size: 1.26rem; }
     }
     a {
       color: #3BA427;
+      word-break: break-all;
+    }
+    .important {
+      color: #c0392b;
+      font-weight: 700;
     }
   </style>
 </head>
@@ -93,6 +107,9 @@
   <div class="container">
     <h1>Privacy Policy – <span class="limeHighlight">LimeGoal</span></h1>
     <div class="updated">Last updated: November 19, 2025</div>
+    <div class="notice">
+      <strong>Quick Summary:</strong> LimeGoal does not track you, does not display ads, and collects only data required for core app functionality.
+    </div>
     <p class="section-text">
       <span class="limeHighlight">LimeGoal</span> (“App”, “We”, “Us”, “Our”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, share, and protect information when you use <span class="limeHighlight">LimeGoal</span>.
     </p>
@@ -132,16 +149,16 @@
 
     <h2>4. Data Sharing &amp; Disclosure</h2>
     <ul>
-      <li><span class="limeHighlight">LimeGoal</span> does not sell or share your personal information with third-party advertisers or analytics providers.</li>
+      <li><span class="limeHighlight">LimeGoal</span> does <b>not</b> sell or share your personal information with third-party advertisers or analytics providers.</li>
       <li>OTP authentication uses Twilio for SMS only.</li>
       <li>No payments, social login, location tracking, or external integrations currently exist.</li>
       <li>Information may be disclosed to law enforcement if required by applicable law.</li>
     </ul>
 
-    <h2>5. Data Modification &amp; Retention</h2>
+    <h2>5. Data Modification, Deletion &amp; Retention</h2>
     <ul>
       <li>Users can update and modify their profile/data at any time within the app.</li>
-      <li>Currently, there is no user-facing data deletion option (delete request is not supported).</li>
+      <li>Users may request deletion of their account and personal data by submitting a request at <a href="delete-account.html">limegoal.com/delete-account.html</a> or by emailing <a href="mailto:contact@limegoal.com">contact@limegoal.com</a>. Deletion requests are normally processed within 7 days.</li>
       <li>Data retention follows app requirements to enable multi-user sessions, match/tournament history.</li>
     </ul>
 
@@ -151,18 +168,24 @@
       <li>No location tracking is used; future addition will be announced via policy update.</li>
     </ul>
 
-    <h2>7. Children’s Privacy</h2>
+    <h2>7. Children's Privacy</h2>
     <ul>
       <li><span class="limeHighlight">LimeGoal</span> does not impose specific age restrictions; all users are responsible for activity and content.</li>
-      <li>No specific provisions for &lt;13 users (COPPA compliance) as age gating is not enforced.</li>
+      <li>No specific provisions for &lt;13 users (COPPA compliance) as age gating is not enforced. If features are later added for children under 13, we will comply with COPPA and provide specific protections.</li>
     </ul>
 
-    <h2>8. Changes to This Policy</h2>
+    <h2>8. Marketing &amp; Promotional Communications</h2>
+    <ul>
+      <li>Your phone number and/or email address <b>may be used by LimeGoal to send you marketing or promotional messages, offers, and updates, but only with your explicit consent (opt-in).</b></li>
+      <li>You can opt-out at any time by following instructions in a message or contacting us at <a href="mailto:contact@limegoal.com">contact@limegoal.com</a>.</li>
+    </ul>
+
+    <h2>9. Changes to This Policy</h2>
     <p class="section-text">
       We may update this Privacy Policy from time to time. When changes occur, the revised policy will be posted in-app and/or on our website, with the date of update.
     </p>
 
-    <h2>9. Future Data Use &amp; Scalability Notice</h2>
+    <h2>10. Future Data Use &amp; Scalability Notice</h2>
     <p class="section-text">
       <span class="limeHighlight">LimeGoal</span> may, in the future, introduce features such as:
     </p>
@@ -186,7 +209,7 @@
       If any of these features are introduced, you will be notified via updated Privacy Policy before new data is collected or permissions requested. Use of new features may require consent and acceptance of revised policy.
     </p>
 
-    <h2>10. Contact Information</h2>
+    <h2>11. Contact Information</h2>
     <div class="contact">
       For questions or concerns regarding privacy or data use, please contact: <a href="mailto:contact@limegoal.com">contact@limegoal.com</a>
     </div>
