--- a/privacy.html
+++ b/privacy.html
@@ -106,10 +106,7 @@
 <body>
   <div class="container">
     <h1>Privacy Policy – <span class="limeHighlight">LimeGoal</span></h1>
-    <div class="updated">Last updated: November 19, 2025</div>
-    <div class="notice">
-      <strong>Quick Summary:</strong> LimeGoal does not track you, does not display ads, and collects only data required for core app functionality.
-    </div>
+    <div class="updated">Last updated: November 21, 2025</div>
     <p class="section-text">
       <span class="limeHighlight">LimeGoal</span> (“App”, “We”, “Us”, “Our”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, share, and protect information when you use <span class="limeHighlight">LimeGoal</span>.
     </p>
@@ -176,7 +173,7 @@
 
     <h2>8. Marketing &amp; Promotional Communications</h2>
     <ul>
-      <li>Your phone number and/or email address <b>may be used by LimeGoal to send you marketing or promotional messages, offers, and updates, but only with your explicit consent (opt-in).</b></li>
+      <li>Your phone number and/or email address may be used by LimeGoal to send you marketing or promotional messages, offers, and updates, but only with your explicit consent (opt-in).</li>
       <li>You can opt-out at any time by following instructions in a message or contacting us at <a href="mailto:contact@limegoal.com">contact@limegoal.com</a>.</li>
     </ul>
 
